# naacl-2024

./: .gitignore  pyproject.toml
data/beleaf/: cg_beleaf.csv  cg_beleaf_extracted_events.csv  cg_beleaf_extracted_events_with_coref.csv  cg_raw.csv
data/cg/: 4245_Magda_230613.tsv  4248_PlatinumMagdaFULL_230615.tsv  4310_PlatinumMagda_230615.tsv  4431_Magda_230615.tsv
data/prompts/: gpt-zero-shot
data/questions/: 4245_Magda_yn_questions.csv
src/core/: evaluate.py
src/data/: cg.py  questions.py
