[tool.poetry]
name = "naacl-2024"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "naacl_2024"}]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"


[tool.poetry.group.dev.dependencies]
ipython = "^8.18.1"
pre-commit = "^3.5.0"
mypy = "^1.7.1"
pylint = "^3.0.2"
ipdb = "^0.13.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
